--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	
 </title>
 
-<link href="/index.xml" rel="alternate" type="application/rss+xml" title="三场五幕ToolBox" />
+<link href="https://czhweb.gitee.io/index.xml" rel="alternate" type="application/rss+xml" title="三场五幕ToolBox" />
 
 
 
@@ -40,7 +40,7 @@
 
 
 
-<script src="/js/pico.min.f68158e607f7493b08ceb09d0d24efe0.js" intergrity="md5-9oFY5gf3STsIzrCdDSTv4A==" crossorigin="anonymous"></script>
+<script src="https://czhweb.gitee.io/js/pico.min.f68158e607f7493b08ceb09d0d24efe0.js" intergrity="md5-9oFY5gf3STsIzrCdDSTv4A==" crossorigin="anonymous"></script>
 
 
 	
@@ -49,7 +49,7 @@
 
 
 
-<link rel="stylesheet" href="/css/main.min.012833708808652e005660d4ee49e686.css" crossorigin="anonymous" media="screen"
+<link rel="stylesheet" href="https://czhweb.gitee.io/css/main.min.012833708808652e005660d4ee49e686.css" crossorigin="anonymous" media="screen"
 	integrity="md5-ASgzcIgIZS4AVmDU7knmhg==">
 
 
@@ -63,7 +63,7 @@
 
 
 
-<link rel="stylesheet" href="/style/style.min.ab682bff6c64be37017ae2a9015d7af7.css" crossorigin="anonymous" media="screen"
+<link rel="stylesheet" href="https://czhweb.gitee.io/style/style.min.ab682bff6c64be37017ae2a9015d7af7.css" crossorigin="anonymous" media="screen"
 	integrity="md5-q2gr/2xkvjcBeuKpAV169w==">
 
 
@@ -75,7 +75,7 @@
 
 
 
-<link rel="stylesheet" href="/css/main.min.d5d46344e3b621a3e3a173927106f45d.css" crossorigin="anonymous" media="screen"
+<link rel="stylesheet" href="https://czhweb.gitee.io/css/main.min.d5d46344e3b621a3e3a173927106f45d.css" crossorigin="anonymous" media="screen"
 	integrity="md5-1dRjROO2IaPjoXOScQb0XQ==">
 
 
@@ -88,7 +88,7 @@
 <header class="w-full flex items-center justify-between px-5 mx-auto md:pt-8 md:max-w-5xl pt-5">
 	
 	<div class="flex items-center">
-		<a href="/" class="inline-block font-bold no-underline select-none">
+		<a href="https://czhweb.gitee.io/" class="inline-block font-bold no-underline select-none">
 			<h1 class="font-charter tracking-normal m-0">
 				三场五幕ToolBox
 			</h1>
@@ -113,12 +113,12 @@
 			 关于
 		</a>
 		
-		<a href="/https:/czhweb.gitee.io/"
+		<a href="/"
 			class='mx-1 md:mx-2 hover:text-primary-light dark:hover:text-primary-dark no-underline'>
 			导航站 
 		</a>
 		
-		<a href="/https:/czhweb.gitee.io/software/"
+		<a href="/software/"
 			class='mx-1 md:mx-2 hover:text-primary-light dark:hover:text-primary-dark no-underline'>
 			软件站 
 		</a>
@@ -499,7 +499,7 @@
 
 	<div class="absolute bottom-0 w-full"><footer class="w-full h-24 text-center text-xs text-gray-400 bg-black relative">
 	<div class="w-full px-6 md:pt-0 md:mx-auto md:max-w-5xl flex flex-1 space-between items-center absolute-center">
-		<a href="/" class="absolute no-underline">
+		<a href="https://czhweb.gitee.io/" class="absolute no-underline">
 			<div class="w-36 h-8 relative bg-white blend-diff">
 	<h1 class="flex-center m-0 font-charter text-2xl text-gray-100 blend-diff select-none text-decoration:none">
 		三场五幕
